[package]
name = "usopp-send"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.18.17"
solana-sdk = "1.18.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
shellexpand = "3.1.0"
dirs = "5.0.1" # For home directory resolution

[dev-dependencies]
tempfile = "3.10.1"
