[package]
name = "usopp-send"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.18.5" 
solana-sdk = "1.18.5"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1" # For home directory resolution
log = "0.4"
env_logger = "0.11.3"

[dev-dependencies]
tempfile = "3.10.1"
