[package]
name = "usopp-send"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "2.2.7"
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1" # For tilde expansion in paths
bs58 = "0.5.1" # Added for base58 encoding (e.g. Pubkey display)
# dirs = "5.0.1" # Commenting out as shellexpand is used for path expansion
log = "0.4"
env_logger = "0.11.3"

[dev-dependencies]
tempfile = "3.10.1"
